sample/msvc/error/c2504.cpp
// C2504.cpp
// compile with: /c
class A;
class B : public A {};   // C2504
